# butter

./: .gitignore  BUILDING.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RELEASES.md  meson.build
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  feature_request.md
butterd/: Cargo.toml  meson.build
butterd/data/: meson.build
butterd/src/: btrfs.rs  config.rs  config.rs.in  filesystem.rs  interface.rs  lib.rs  main.rs  meson.build  mnt.rs  rule.rs  rule_config.rs  schedule.rs  storage.rs  subvol.rs  subvolume.rs  zvariant.rs
data/: butter-schedule-prune.service.in  butter-schedule-prune.timer  butter-schedule-snapshot.service.in  butter-schedule-snapshot.timer  launch.sh  meson.build  org.zhangyuannie.Butter.desktop  org.zhangyuannie.Butter.gschema.xml  org.zhangyuannie.Butter1.conf  org.zhangyuannie.Butter1.service.in  org.zhangyuannie.butter.conf  org.zhangyuannie.butter.desktop  org.zhangyuannie.butter.gschema.xml  org.zhangyuannie.butter.policy  org.zhangyuannie.butter.policy.in  restorecon
data/icons/: meson.build
data/resources/: resources.gresource.xml
data/resources/ui/: app_header_bar.ui  app_window.ui  file_chooser_entry.ui  header_bar.ui  label_cell.ui  rename_popover.ui  schedule_rule_edit_dialog.ui  schedule_rule_row.ui  schedule_view.ui  selection_menu.ui  snapshot_column_cell.ui  snapshot_creation_window.ui  snapshot_rename_popover.ui  snapshot_view.ui  subvolume_label_cell.ui  window.ui
packaging/: butter.spec.in  copr.sh
po/: LINGUAS  POTFILES  POTFILES.in  butter.pot  fr.po  meson.build  ta.po  zh_CN.po
rpc/: Cargo.toml
rpc-macros/: Cargo.toml
rpc-macros/src/: lib.rs
rpc/src/: lib.rs
scripts/: cargo_build  reseat_file  restorecon
src/: application.rs  btrfs.rs  client.rs  comm.rs  config.rs  config.rs.in  file_chooser_entry.rs  filesystem.rs  json_file.rs  lib.rs  main.rs  meson.build  object.rs  org.zhangyuannie.butter.policy.in  rename_popover.rs  requester.rs  rule.rs  schedule_exec.rs  schedule_repo.rs  snapshot_column_cell.rs  snapshot_creation_window.rs  snapshot_object.rs  snapshot_view.rs  subvolume.rs  subvolume_manager.rs  ui.rs  widgets.rs  window.rs
src/daemon/: btrfs.rs  cmd.rs  interface.rs  ioctl.rs  libc.rs  main.py  main.rs  main.test.py  meson.build  mnt_entry.rs  mod.rs  mounted_fs.rs  proxy.rs  snapshot_metadata.rs
src/filesystem/: object.rs  subvolume_ext.rs
src/object/: filesystem.rs  rule.rs  subvolume.rs
src/object/subvolume/: attribute.rs  list.rs  sorter.rs
src/rule/: name.rs  object.rs
src/schedule/: conf.rs  mod.rs  select.rs
src/subvolume/: created_sorter.rs  g_btrfs_filesystem.rs  list.rs  object.rs  proxy.rs  subvolume_manager.rs
src/subvolume/object/: attribute.rs  sorter.rs
src/timeline/: conf.rs  mod.rs
src/ui/: application.rs  prelude.rs  store.rs
src/ui/widgets/: app_header_bar.rs  app_window.rs  file_chooser_entry.rs  schedule_rule_edit_dialog.rs  schedule_rule_row.rs  schedule_view.rs  snapshot_creation_window.rs  snapshot_rename_popover.rs  snapshot_view.rs  subvolume_label_cell.rs
src/widgets/: app_header_bar.rs  app_window.rs  file_chooser_entry.rs  label_cell.rs  schedule_rule_edit_dialog.rs  schedule_rule_row.rs  schedule_view.rs  snapshot_creation_window.rs  snapshot_rename_popover.rs  snapshot_view.rs  subvolume_label_cell.rs
