[package]
name = "butter"
version = "0.1.0"
edition = "2021"
authors = ["Zhangyuan Nie"]
license = "GPL-3.0-only"

[dependencies]
gtk = { version = "0.6.1", package = "gtk4", features = ["gnome_43"] }
adw = { version = "0.3.1", package = "libadwaita", features = ["v1_2", "gtk_v4_6"] }
regex = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gettext = { version = "0.7", package = "gettext-rs", features = ["gettext-system"] }
uuid = { version = "1", features = ["serde", "v4"] }
log = "0.4"
env_logger = "0.9"

tempfile = "3.3.0"
libc = "0.2.126"
anyhow = "1.0.57"
libbtrfsutil = "0.5.2"
indexmap = "1.8.2"
chrono = "0.4.20"
clap = { version = "3.2.8", features = ["derive"] }
rand = "0.8.5"
zbus = { version = "3.8", default-features = false, features = ["tokio", "uuid", "gvariant"] }
nix = "0.25"
once_cell = "1.16.0"
zbus_systemd = { version = "0.0.8", features = ["systemd1"] }
zbus_polkit = "3"
tokio = { version = "1.21", features = ["full"] }
