[package]
name = "butterd"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21", features = ["full"] }
zbus = { version = "3.2", default-features = false, features = ["tokio"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
