[package]
name = "butterd"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21", features = ["full"] }
zbus = { version = "3.6.2", default-features = false, features = ["tokio", "uuid", "gvariant"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.9"
zbus_polkit = "3"
zbus_systemd = { version = "0.0.8", features = ["systemd1"] }
uuid = "1"
once_cell = "1.16.0"
regex = "1"
nix = "0.25"
libbtrfsutil = "0.5.1"
